--- a/sparePartsStore/MainWindow.xaml
+++ b/sparePartsStore/MainWindow.xaml
@@ -4,9 +4,10 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:sparePartsStore"
-        mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        mc:Ignorable="d" 
+        Title="" MinHeight="700" MinWidth="1200">
     <Grid>
-
+        <!--фрейм отображение страниц на главном окне-->
+        <Frame x:Name="mainFrame"  NavigationUIVisibility="Hidden"/>
     </Grid>
 </Window>
