--- a/sparePartsStore/Dictionary/Dictionary.xaml
+++ b/sparePartsStore/Dictionary/Dictionary.xaml
@@ -5,11 +5,29 @@
     <Style x:Key="BtnMenuHead" TargetType="Button">
         <Setter Property="Background" Value="Transparent"/>
         <Setter Property="BorderThickness" Value="0"/>
-        <Setter Property="FontWeight" Value="DemiBold"/>
+        <Setter Property="FontWeight" Value="Regular"/>
         <Setter Property="Foreground" Value="Black"/>
         <Setter Property="FontSize" Value="17"/>
         <Setter Property="VerticalAlignment" Value="Center"/>
         <Setter Property="IsTabStop" Value="False"/> <!--исключаем Tab-->
     </Style>
-    
+
+    <!--перенос строки, если не умещается в одну строку-->
+    <Style TargetType="{x:Type DataGridColumnHeader}" x:Key="columnTable">
+        <Setter Property="HorizontalContentAlignment" Value="Center" />
+        <Setter Property="VerticalContentAlignment" Value="Center" />
+        <Setter Property="Foreground" Value="Black"/>
+        <Setter Property="FontWeight" Value="Bold"/>
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="{x:Type DataGridColumnHeader}">
+                    <Border BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="{TemplateBinding BorderThickness}" Background="{TemplateBinding Background}" Padding="{TemplateBinding Padding}">
+                        <TextBlock Text="{TemplateBinding Content}" TextWrapping="Wrap" VerticalAlignment="Center" HorizontalAlignment="Center"/>
+                    </Border>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
+
+
 </ResourceDictionary>
