--- a/sparePartsStore/View/ViewAdministrator/ViewWorkingWithData/PageListCountry.xaml
+++ b/sparePartsStore/View/ViewAdministrator/ViewWorkingWithData/PageListCountry.xaml
@@ -1,4 +1,4 @@
-﻿<Page x:Class="sparePartsStore.View.ViewAdministrator.ViewWorkingWithData.PageListUnit"
+﻿<Page x:Class="sparePartsStore.View.ViewAdministrator.ViewWorkingWithData.PageListCountry"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -8,7 +8,7 @@
       mc:Ignorable="d" 
       Title="" MinHeight="700" Height="Auto" MinWidth="1200" Width="Auto">
 
-    <!--агрегат-->
+    <!--страны-->
     <Grid Background="White" Margin="50,0,50,0">
 
         <!--стили-->
@@ -30,8 +30,8 @@
             <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
 
-        <!--Список агрегатов автомобиля-->
-        <TextBlock Grid.Row="0" Grid.Column="0" Text="Список агрегатов автомобиля" FontSize="30" Foreground="Black" FontWeight="DemiBold" Margin="0,40,0,40" VerticalAlignment="Center"/>
+        <!--Список стран производства запчастей автомобилей-->
+        <TextBlock Grid.Row="0" Grid.Column="0" Text="Список стран" FontSize="30" Foreground="Black" FontWeight="DemiBold" Margin="0,40,0,40" VerticalAlignment="Center"/>
 
         <!--кнопки управления-->
         <Grid Grid.Row="1" Grid.Column="0">
@@ -52,26 +52,26 @@
             <Button Grid.Row="0" Grid.Column="2" Content="Удалить" MinWidth="100" Height="35" Background="Gray" BorderBrush="Black" Margin="10,0,0,0"/>
 
             <TextBox Grid.Row="1" Grid.ColumnSpan="3" x:Name="SearchParts" Height="50" Margin="0,20,0,0"
-                 VerticalAlignment="Center" 
-                 Text="{Binding InputLogin, UpdateSourceTrigger=PropertyChanged}"   
-                 materialDesign:TextFieldAssist.HasClearButton="True"
-                 Style="{StaticResource MaterialDesignOutlinedTextBox}" 
-                 materialDesign:HintAssist.Hint="Поиск агрегата" 
-                 materialDesign:TextFieldAssist.CharacterCounterVisibility="Hidden"
-                 MaxLength="100" TextWrapping="Wrap" MinWidth="300" />
+         VerticalAlignment="Center" 
+         Text="{Binding InputLogin, UpdateSourceTrigger=PropertyChanged}"   
+         materialDesign:TextFieldAssist.HasClearButton="True"
+         Style="{StaticResource MaterialDesignOutlinedTextBox}" 
+         materialDesign:HintAssist.Hint="Поиск страны" 
+         materialDesign:TextFieldAssist.CharacterCounterVisibility="Hidden"
+         MaxLength="100" TextWrapping="Wrap" MinWidth="300" />
 
         </Grid>
 
         <!--таблица-->
         <Grid Grid.Row="1" Grid.Column="1" MinWidth="600">
             <DataGrid
-        HorizontalAlignment="Center"
-        AutoGenerateColumns="False"
-        Style="{StaticResource MaterialDesignDataGrid}"
-        ColumnHeaderStyle="{StaticResource columnTable}">
+HorizontalAlignment="Center"
+AutoGenerateColumns="False"
+Style="{StaticResource MaterialDesignDataGrid}"
+ColumnHeaderStyle="{StaticResource columnTable}">
 
                 <DataGrid.Columns>
-                    <DataGridTextColumn Header="Агрегат" Binding="{Binding numberParts}" MinWidth="500"/>
+                    <DataGridTextColumn Header="Страна" Binding="{Binding numberParts}" MinWidth="500"/>
                 </DataGrid.Columns>
 
             </DataGrid>
