--- a/sparePartsStore/View/ViewAdministrator/ViewWorkingWithData/PageListManufacture.xaml
+++ b/sparePartsStore/View/ViewAdministrator/ViewWorkingWithData/PageListManufacture.xaml
@@ -1,4 +1,4 @@
-﻿<Page x:Class="sparePartsStore.View.ViewAdministrator.ViewWorkingWithData.PageListKnot"
+﻿<Page x:Class="sparePartsStore.View.ViewAdministrator.ViewWorkingWithData.PageListManufacture"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -8,7 +8,7 @@
       mc:Ignorable="d" 
       Title="" MinHeight="700" Height="Auto" MinWidth="1200" Width="Auto">
 
-    <!--узел-->
+    <!--производитель-->
     <Grid Background="White" Margin="50,0,50,0">
 
         <!--стили-->
@@ -26,7 +26,7 @@
         </Grid.RowDefinitions>
 
         <!--Список узлов автомобиля-->
-        <TextBlock Grid.Row="0" Grid.Column="0" Text="Список узлов автомобиля" FontSize="30" Foreground="Black" FontWeight="DemiBold" HorizontalAlignment="Left" Margin="0,40,0,40" VerticalAlignment="Center"/>
+        <TextBlock Grid.Row="0" Grid.Column="0" Text="Список производителей" FontSize="30" Foreground="Black" FontWeight="DemiBold" HorizontalAlignment="Left" Margin="0,40,0,40" VerticalAlignment="Center"/>
 
         <!--кнопки и таблица-->
         <Grid Grid.Row="1">
@@ -63,7 +63,7 @@
                         Text="{Binding InputLogin, UpdateSourceTrigger=PropertyChanged}"   
                         materialDesign:TextFieldAssist.HasClearButton="True"
                         Style="{StaticResource MaterialDesignOutlinedTextBox}" 
-                        materialDesign:HintAssist.Hint="Поиск узла" 
+                        materialDesign:HintAssist.Hint="Поиск производителя" 
                         materialDesign:TextFieldAssist.CharacterCounterVisibility="Hidden"
                         MaxLength="100"  MinWidth="400"  MaxWidth="900"/>
             </Grid>
@@ -77,8 +77,8 @@
                ColumnHeaderStyle="{StaticResource columnTable}">
 
                     <DataGrid.Columns>
-                        <DataGridTextColumn Header="Узел" Binding="{Binding numberParts}" Width="*"/>
-                        <DataGridTextColumn Header="Агрегат" Binding="{Binding numberParts}" Width="*"/>
+                        <DataGridTextColumn Header="Производитель" Binding="{Binding numberParts}" Width="*"/>
+                        <DataGridTextColumn Header="Страна" Binding="{Binding numberParts}" Width="*"/>
                     </DataGrid.Columns>
 
                 </DataGrid>
