--- a/sparePartsStore/View/ViewAdministrator/ViewSettingRole/PageListUsers.xaml
+++ b/sparePartsStore/View/ViewAdministrator/ViewSettingRole/PageListUsers.xaml
@@ -9,8 +9,8 @@
       Title="" MinHeight="700" Height="Auto" MinWidth="1200" Width="Auto">
 
     <!--пользователи-->
-    <Grid Background="White" >
-        
+    <Grid Background="White" Margin="50,0,50,0" HorizontalAlignment="Stretch">
+
         <!--стили-->
         <Grid.Resources>
             <ResourceDictionary>
@@ -20,19 +20,18 @@
             </ResourceDictionary>
         </Grid.Resources>
 
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="Auto"/>
-        </Grid.ColumnDefinitions>
-
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
 
-        <!--название-->
-        <!--Список пользователей-->
-        <TextBlock Grid.Row="0" Grid.Column="0" Text="Пользователи" FontSize="30" Foreground="Black" FontWeight="DemiBold" HorizontalAlignment="Left" Margin="0,40,0,40" VerticalAlignment="Center"/>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="*"/>
+        </Grid.ColumnDefinitions>
+        
+        <!--Список узлов автомобиля-->
+        <TextBlock Grid.Row="0" Grid.Column="0" Text="Список узлов автомобиля" FontSize="30" Foreground="Black" FontWeight="DemiBold" HorizontalAlignment="Left" Margin="0,40,0,40" VerticalAlignment="Center"/>
 
         <!--кнопки-->
         <Grid Grid.Row="1">
@@ -40,29 +39,58 @@
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*"/>
                 <ColumnDefinition Width="*"/>
-                <ColumnDefinition Width="*"/>
-                <ColumnDefinition Width="*"/>
             </Grid.ColumnDefinitions>
 
-            <Button Grid.Column="0" Content="Добавить" MinWidth="100" Height="35" Background="Gray" BorderBrush="Black"/>
-            <Button Grid.Column="1" Content="Редктировать" MinWidth="100" Height="35" Background="Gray" BorderBrush="Black" Margin="10,0,0,0"/>
-            <Button Grid.Column="2" Content="Удалить" MinWidth="100" Height="35" Background="Gray" BorderBrush="Black" Margin="10,0,0,0"/>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
+            </Grid.RowDefinitions>
 
-            <TextBox Grid.Column="3" x:Name="SearchParts" Height="50" Margin="10,0,0,0"
-                    VerticalAlignment="Center"  HorizontalAlignment="Center"
-                    Text="{Binding InputLogin, UpdateSourceTrigger=PropertyChanged}"   
-                    materialDesign:TextFieldAssist.HasClearButton="True"
-                    Style="{StaticResource MaterialDesignOutlinedTextBox}" 
-                    materialDesign:HintAssist.Hint="Поиск запчасти" 
-                    materialDesign:TextFieldAssist.CharacterCounterVisibility="Hidden"
-                    MaxLength="100" MinWidth="408"/>
+            <!--кнопки-->
+            <Grid Grid.Row="0" Grid.Column="0">
+
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="*"/>
+                </Grid.ColumnDefinitions>
+
+                <Button Grid.Row="0" Grid.Column="0" Content="Добавить" MinWidth="100" Height="35" Background="Gray" BorderBrush="Black"/>
+                <Button Grid.Row="0" Grid.Column="1" Content="Редктировать" MinWidth="100" Height="35" Background="Gray" BorderBrush="Black" Margin="10,0,0,0"/>
+                <Button Grid.Row="0" Grid.Column="2" Content="Удалить" MinWidth="100" Height="35" Background="Gray" BorderBrush="Black" Margin="10,0,0,0"/>
+
+            </Grid>
+
+            <!--поле для поиска-->
+            <Grid Grid.Row="0" Grid.Column="1">
+                <TextBox x:Name="SearchParts" Height="50" Margin="0,0,0,0"
+                        VerticalAlignment="Center"  HorizontalAlignment="Right"
+                        Text="{Binding InputLogin, UpdateSourceTrigger=PropertyChanged}"   
+                        materialDesign:TextFieldAssist.HasClearButton="True"
+                        Style="{StaticResource MaterialDesignOutlinedTextBox}" 
+                        materialDesign:HintAssist.Hint="Поиск узла" 
+                        materialDesign:TextFieldAssist.CharacterCounterVisibility="Hidden"
+                        MaxLength="100"  MinWidth="400"/>
+            </Grid>
 
         </Grid>
 
         <!--таблица-->
-        <Grid Grid.Row="2">
+        <Grid Grid.Row="2" Margin="0,40,0,0">
 
-            <DataGrid>
+            <DataGrid
+                HorizontalAlignment="Center"
+                AutoGenerateColumns="False"
+                Style="{StaticResource MaterialDesignDataGrid}"
+                ColumnHeaderStyle="{StaticResource columnTable}">
+
+                <DataGrid.Columns>
+                    <DataGridTextColumn Header="Логин" Binding="{Binding }" Width="*"/>
+                    <DataGridTextColumn Header="Роль" Binding="{Binding }" Width="*"/>
+                    <DataGridTextColumn Header="Название организации" Binding="{Binding }" Width="*"/>
+                    <DataGridTextColumn Header="Электронная почта" Binding="{Binding }" Width="*"/>
+                    <DataGridTextColumn Header="Номер телефона" Binding="{Binding }" Width="*"/>
+                </DataGrid.Columns>
                 
             </DataGrid>
             
