--- a/sparePartsStore/Dictionary/Dictionary.xaml
+++ b/sparePartsStore/Dictionary/Dictionary.xaml
@@ -29,5 +29,13 @@
         </Setter>
     </Style>
 
+    <!--стиль прозрачной кнопки-->
+    <Style TargetType="Button" x:Key="TransparentButton">
+        <Setter Property="Background" Value="Transparent"/>
+        <Setter Property="BorderThickness" Value="0"/>
+        <Setter Property="IsTabStop" Value="False"/>
+    </Style>
+    
+    
 
 </ResourceDictionary>
