--- a/sparePartsStore/View/ViewAdministrator/ViewWorkingWithData/PageListAnalogues.xaml
+++ b/sparePartsStore/View/ViewAdministrator/ViewWorkingWithData/PageListAnalogues.xaml
@@ -8,7 +8,110 @@
       mc:Ignorable="d" 
       Title="" MinHeight="700" Height="Auto" MinWidth="1200" Width="Auto">
 
-    <Grid>
+    <!--аналоги-->
+    <Grid Background="White" Margin="50,0,50,0">
+
+        <!--стили-->
+        <Grid.Resources>
+            <ResourceDictionary>
+                <ResourceDictionary.MergedDictionaries>
+                    <ResourceDictionary Source="/Dictionary/Dictionary.xaml"/>
+                </ResourceDictionary.MergedDictionaries>
+            </ResourceDictionary>
+        </Grid.Resources>
+
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="Auto"/>
+        </Grid.ColumnDefinitions>
+
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
+        </Grid.RowDefinitions>
+
+        <!--заголовок-->
+        <StackPanel Grid.Row="0" Grid.Column="0" Orientation="Horizontal">
+            <TextBlock Text="Список аналогов для: " FontSize="30" Foreground="Black" FontWeight="DemiBold" Margin="0,40,0,40" VerticalAlignment="Center"/>
+            <TextBlock Text="Какая-то запчасть" FontSize="30" Foreground="Black" FontWeight="DemiBold" Margin="0,40,0,40" VerticalAlignment="Center"/>
+        </StackPanel>
+        
+        <!--таблица с подобранными аналогами-->
+        <Grid Grid.Row="1" Grid.Column="0" HorizontalAlignment="Left">
+
+            <ScrollViewer VerticalScrollBarVisibility="Hidden">
+                <DataGrid
+                    HorizontalAlignment="Center"
+                    AutoGenerateColumns="False"
+                    Style="{StaticResource MaterialDesignDataGrid}"
+                    ColumnHeaderStyle="{StaticResource columnTable}">
+
+                    <DataGrid.Columns>
+                        <DataGridTextColumn Header="Номер" Binding="{Binding numberParts}" MinWidth="100"/>
+                        <DataGridTextColumn Header="Название" Binding="{Binding numberParts}" MinWidth="100"/>
+                        <DataGridTextColumn Header="Агрегат" Binding="{Binding numberParts}" MinWidth="100"/>
+                        <DataGridTextColumn Header="Узел" Binding="{Binding numberParts}" MinWidth="100"/>
+                        <DataGridTextColumn Header="Марка" Binding="{Binding numberParts}" MinWidth="100"/>
+                        <DataGridTextColumn Header="Модель" Binding="{Binding numberParts}" MinWidth="100"/>
+                        <DataGridTextColumn Header="Поставщик" Binding="{Binding numberParts}" MinWidth="100"/>
+                    </DataGrid.Columns>
+                </DataGrid>
+            </ScrollViewer>
+        
+        </Grid>
+        
+        <!--кнопка удалить-->
+        <Button Grid.Row="1" Grid.Column="1" Content="Удалить" MinWidth="100" MaxWidth="200" Height="35" Background="Gray" BorderBrush="Black" Margin="50,0,0,0" HorizontalAlignment="Right"/>
+
+        <!--список запчастей-->
+        <TextBlock Grid.Row="2" Grid.Column="0" Text="Список запчастей" FontSize="30" Foreground="Black" FontWeight="DemiBold" Margin="0,40,0,40" VerticalAlignment="Center"/>
+
+        <!--поле поиска и кнопка добавить-->
+        <Grid Grid.Row="2" Grid.ColumnSpan="2" HorizontalAlignment="Right">
+
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="Auto"/>
+                <ColumnDefinition Width="Auto"/>
+            </Grid.ColumnDefinitions>
+
+            <Button Grid.Row="0" Grid.Column="0" Content="Добавить" MinWidth="100" Height="35" Background="Gray" BorderBrush="Black" Margin="50,0,0,0"/>
+
+            <TextBox Grid.Row="0" Grid.Column="1" x:Name="SearchParts" Height="50" Margin="20,0,0,0"
+                         VerticalAlignment="Center" 
+                         Text="{Binding InputLogin, UpdateSourceTrigger=PropertyChanged}"   
+                         materialDesign:TextFieldAssist.HasClearButton="True"
+                         Style="{StaticResource MaterialDesignOutlinedTextBox}" 
+                         materialDesign:HintAssist.Hint="Поиск марки" 
+                         materialDesign:TextFieldAssist.CharacterCounterVisibility="Hidden"
+                         MaxLength="100" TextWrapping="Wrap" MinWidth="300" />
+
+        </Grid>
+        
+        <!--таблица запчастей-->
+        <Grid Grid.Row="3" Grid.ColumnSpan="2">
+
+            <ScrollViewer VerticalScrollBarVisibility="Hidden">
+                <DataGrid
+                    HorizontalAlignment="Center"
+                    AutoGenerateColumns="False"
+                    Style="{StaticResource MaterialDesignDataGrid}"
+                    ColumnHeaderStyle="{StaticResource columnTable}">
+
+                    <DataGrid.Columns>
+                        <DataGridTextColumn Header="Номер" Binding="{Binding numberParts}" MinWidth="150"/>
+                        <DataGridTextColumn Header="Название" Binding="{Binding numberParts}" MinWidth="200"/>
+                        <DataGridTextColumn Header="Агрегат" Binding="{Binding numberParts}" MinWidth="150"/>
+                        <DataGridTextColumn Header="Узел" Binding="{Binding numberParts}" MinWidth="150"/>
+                        <DataGridTextColumn Header="Марка" Binding="{Binding numberParts}" MinWidth="150"/>
+                        <DataGridTextColumn Header="Модель" Binding="{Binding numberParts}" MinWidth="150"/>
+                        <DataGridTextColumn Header="Поставщик" Binding="{Binding numberParts}" MinWidth="150"/>
+                    </DataGrid.Columns>
+                </DataGrid>
+            </ScrollViewer>
+            
+        </Grid>
         
     </Grid>
 </Page>
