--- a/sparePartsStore/View/ViewAdministrator/ViewWorking/PageWorkListBrand.xaml
+++ b/sparePartsStore/View/ViewAdministrator/ViewWorking/PageWorkListBrand.xaml
@@ -39,7 +39,7 @@
             <!-- Верхняя часть экрана -->
             <Grid HorizontalAlignment="Left" VerticalAlignment="Top">
                 <Button Content="Домой" Margin="50, 4, 0, 0" Padding="-20, -3, 0, 0" Width="100" Command="{Binding ClosePageAddOrDeleteCarBrands}"  Background="Gray" BorderBrush="Black"/>
-                <materialDesign:PackIcon Kind="Home" Margin="120, 7, 0, 0" Width="20" Height="20"/>
+                <materialDesign:PackIcon Kind="Home" Margin="120, 10, 0, 0" Width="20" Height="20"/>
             </Grid>
 
         </Grid>
@@ -63,7 +63,7 @@
             </Grid.ColumnDefinitions>
 
             <Button Grid.Row="0" Grid.Column="0" Content="Отмена" Width="150" Height="35" Background="Gray" BorderBrush="Black"/>
-            <Button Grid.Row="0" Grid.Column="1" Content="Добавить" Width="150" Height="35" Background="Gray" BorderBrush="Black" Margin="20,0,0,0"/>
+            <Button Grid.Row="0" Grid.Column="1" Content="Добавить" x:Name="RenameButtonBrand" Width="150" Height="35" Background="Gray" BorderBrush="Black" Margin="20,0,0,0"/>
 
         </Grid>
         
