--- a/sparePartsStore/View/ViewAdministrator/ViewWorking/PageWorkCountry.xaml
+++ b/sparePartsStore/View/ViewAdministrator/ViewWorking/PageWorkCountry.xaml
@@ -1,4 +1,4 @@
-﻿<Page x:Class="sparePartsStore.View.ViewAdministrator.ViewWorking.PageWorkListBrand"
+﻿<Page x:Class="sparePartsStore.View.ViewAdministrator.ViewWorking.PageWorkCountry"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -25,9 +25,9 @@
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
-        
+
         <!--название-->
-        <TextBlock Grid.Row="0" Grid.Column="0" Text="Марка" FontSize="30" Foreground="Black" FontWeight="DemiBold" Margin="0,80,0,40" VerticalAlignment="Center" HorizontalAlignment="Center"/>
+        <TextBlock Grid.Row="0" Grid.Column="0" Text="Страна" FontSize="30" Foreground="Black" FontWeight="DemiBold" Margin="0,80,0,40" VerticalAlignment="Center" HorizontalAlignment="Center"/>
 
         <!--возврат на главную-->
         <Grid  Grid.Row="0" Grid.Column="0" Visibility="Visible" x:Name="closeFrame" Margin="0,0,0,40">
@@ -50,7 +50,7 @@
              Text="{Binding InputLogin, UpdateSourceTrigger=PropertyChanged}"   
              materialDesign:TextFieldAssist.HasClearButton="True"
              Style="{StaticResource MaterialDesignOutlinedTextBox}" 
-             materialDesign:HintAssist.Hint="Введите название марки" 
+             materialDesign:HintAssist.Hint="Введите название страны" 
              materialDesign:TextFieldAssist.CharacterCounterVisibility="Hidden"
              MaxLength="100" TextWrapping="Wrap" Width="320" />
 
@@ -66,6 +66,6 @@
             <Button Grid.Row="0" Grid.Column="1" Content="Добавить" x:Name="RenameButtonBrand" Width="150" Height="35" Background="Gray" BorderBrush="Black" Margin="20,0,0,0"/>
 
         </Grid>
-        
+
     </Grid>
 </Page>
