--- a/sparePartsStore/View/ViewAdministrator/ViewWorking/PageWorkKnot.xaml
+++ b/sparePartsStore/View/ViewAdministrator/ViewWorking/PageWorkKnot.xaml
@@ -1,15 +1,15 @@
-﻿<Page x:Class="sparePartsStore.View.ViewAdministrator.ViewWorking.PageWorkListBrand"
+﻿<Page x:Class="sparePartsStore.View.ViewAdministrator.ViewWorking.PageWorkKnot"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:sparePartsStore.View.ViewAdministrator.ViewWorking"
-      mc:Ignorable="d" 
       xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes" 
       xmlns:local1="clr-namespace:sparePartsStore.ViewModel"
+      mc:Ignorable="d" 
       Title="" MinHeight="700" Height="Auto" MinWidth="1200" Width="Auto">
 
-
+    <!--узел-->
     <Page.Resources>
         <local1:ListCarBrandViewModel x:Key="ListCarBrandViewModel"/>
     </Page.Resources>
@@ -24,10 +24,8 @@
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
-        
-        <!--название-->
-        <TextBlock Grid.Row="0" Grid.Column="0" Text="Марка" FontSize="30" Foreground="Black" FontWeight="DemiBold" Margin="0,80,0,40" VerticalAlignment="Center" HorizontalAlignment="Center"/>
 
         <!--возврат на главную-->
         <Grid  Grid.Row="0" Grid.Column="0" Visibility="Visible" x:Name="closeFrame" Margin="0,0,0,40">
@@ -44,18 +42,28 @@
 
         </Grid>
 
+        <!--название-->
+        <TextBlock Grid.Row="0" Grid.Column="0" Text="Узел" FontSize="30" Foreground="Black" FontWeight="DemiBold" Margin="0,80,0,40" VerticalAlignment="Center" HorizontalAlignment="Center"/>
+
+        <!--поле для выбора данных-->
+        <ComboBox Grid.Column="0" Grid.Row="1"
+            Width="320" Margin="10,0,0,0"
+            materialDesign:HintAssist.Hint="Выберите агрегат" IsEditable="True"
+            Style="{StaticResource MaterialDesignOutlinedComboBox}"/>
+
         <!--поля для ввода данных-->
-        <TextBox Grid.Row="1" Grid.Column="0" x:Name="SearchParts" Height="50" Margin="0,30,0,0"
+        <TextBox Grid.Row="2" Grid.Column="0" x:Name="SearchParts" Height="50" Margin="0,30,0,0"
              VerticalAlignment="Center" HorizontalAlignment="Center"
              Text="{Binding InputLogin, UpdateSourceTrigger=PropertyChanged}"   
              materialDesign:TextFieldAssist.HasClearButton="True"
              Style="{StaticResource MaterialDesignOutlinedTextBox}" 
-             materialDesign:HintAssist.Hint="Введите название марки" 
+             materialDesign:HintAssist.Hint="Введите название узла" 
              materialDesign:TextFieldAssist.CharacterCounterVisibility="Hidden"
              MaxLength="100" TextWrapping="Wrap" Width="320" />
 
         <!--кнопки-->
-        <Grid Grid.Row="2" Grid.Column="0" Margin="0,40,0,0" HorizontalAlignment="Center">
+        <!--кнопки-->
+        <Grid Grid.Row="3" Grid.Column="0" Margin="0,40,0,0" HorizontalAlignment="Center">
 
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*"/>
@@ -66,6 +74,6 @@
             <Button Grid.Row="0" Grid.Column="1" Content="Добавить" x:Name="RenameButtonBrand" Width="150" Height="35" Background="Gray" BorderBrush="Black" Margin="20,0,0,0"/>
 
         </Grid>
-        
+
     </Grid>
 </Page>
