--- a/sparePartsStore/View/ViewAdministrator/ViewWorking/PageWorkListBrand.xaml
+++ b/sparePartsStore/View/ViewAdministrator/ViewWorking/PageWorkListBrand.xaml
@@ -9,7 +9,6 @@
       xmlns:local1="clr-namespace:sparePartsStore.ViewModel"
       Title="" MinHeight="700" Height="Auto" MinWidth="1200" Width="Auto">
 
-
     <Page.Resources>
         <local1:ListCarBrandViewModel x:Key="ListCarBrandViewModel"/>
     </Page.Resources>
@@ -47,7 +46,7 @@
         <!--поля для ввода данных-->
         <TextBox Grid.Row="1" Grid.Column="0" x:Name="SearchParts" Height="50" Margin="0,30,0,0"
              VerticalAlignment="Center" HorizontalAlignment="Center"
-             Text="{Binding InputLogin, UpdateSourceTrigger=PropertyChanged}"   
+             Text="{Binding Path=TextBrand, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"   
              materialDesign:TextFieldAssist.HasClearButton="True"
              Style="{StaticResource MaterialDesignOutlinedTextBox}" 
              materialDesign:HintAssist.Hint="Введите название марки" 
