--- a/sparePartsStore/View/ViewAdministrator/ViewMainPages/PageMainHead.xaml
+++ b/sparePartsStore/View/ViewAdministrator/ViewMainPages/PageMainHead.xaml
@@ -14,7 +14,7 @@
         <ViewModel:MainHeadViewModel x:Key="MainHeadViewModel" />
     </Page.Resources>
 
-    <Grid>
+    <Grid >
 
         <!--стили-->
         <Grid.Resources>
@@ -110,7 +110,7 @@
                     <ColumnDefinition Width="10*"/>
                 </Grid.ColumnDefinitions>
 
-                <Button Content="Поиск запчастей" Grid.Column="0" Style="{StaticResource BtnMenuHead}" Click="Btn_SearchParts" />
+                <Button Content="Поиск запчастей" Grid.Column="0" Style="{StaticResource BtnMenuHead}" Command="{Binding Btn_SearchParts, Source={StaticResource MainHeadViewModel}}"/>
                 <Button Content="Марка" Grid.Column="1" Style="{StaticResource BtnMenuHead}" Click="Btn_carBrand"/>
                 <Button Content="Модель" Grid.Column="2" Style="{StaticResource BtnMenuHead}" Click="Btn_carModel"/>
                 <Button Content="Агрегат" Grid.Column="3" Style="{StaticResource BtnMenuHead}" Click="Btn_Unit"/>
