--- a/sparePartsStore/View/ViewAdministrator/ViewWorking/PageWorkListBrand.xaml
+++ b/sparePartsStore/View/ViewAdministrator/ViewWorking/PageWorkListBrand.xaml
@@ -6,14 +6,14 @@
       xmlns:local="clr-namespace:sparePartsStore.View.ViewAdministrator.ViewWorking"
       mc:Ignorable="d" 
       xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes" 
-      xmlns:local1="clr-namespace:sparePartsStore.ViewModel"
+      xmlns:ViewModel="clr-namespace:sparePartsStore.ViewModel"
       Title="" MinHeight="700" Height="Auto" MinWidth="1200" Width="Auto">
 
     <Page.Resources>
-        <local1:ListCarBrandViewModel x:Key="ListCarBrandViewModel"/>
+        <ViewModel:ListCarBrandViewModel x:Key="ListCarBrandViewModel"/>
     </Page.Resources>
 
-    <Grid Background="White" Margin="50,0,50,0" DataContext="{StaticResource ListCarBrandViewModel}">
+    <Grid Background="White" Margin="50,0,50,0">
 
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*"/>
