--- a/sparePartsStore/View/ViewAdministrator/ViewWorkingWithData/PageListCarBrands.xaml
+++ b/sparePartsStore/View/ViewAdministrator/ViewWorkingWithData/PageListCarBrands.xaml
@@ -5,15 +5,15 @@
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:sparePartsStore.View.ViewAdministrator.ViewWorkingWithData"
       xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes" 
-      xmlns:local1="clr-namespace:sparePartsStore.ViewModel"
+      xmlns:ViewModel="clr-namespace:sparePartsStore.ViewModel"
       mc:Ignorable="d" 
       Title="" MinHeight="700" Height="Auto" MinWidth="1200" Width="Auto">
 
     <Page.Resources>
-        <local1:ListCarBrandViewModel x:Key="ListCarBrandViewModel"/>
+        <ViewModel:ListCarBrandViewModel x:Key="ListCarBrandViewModel"/>
     </Page.Resources>
 
-    <Grid Background="White" Margin="50,0,50,0" DataContext="{StaticResource ListCarBrandViewModel}">
+    <Grid Background="White" Margin="50,0,50,0">
 
         <!--стили-->
         <Grid.Resources>
@@ -38,7 +38,7 @@
         <TextBlock Grid.Row="0" Grid.Column="0" Text="Список марок автомобилей" FontSize="30" Foreground="Black" FontWeight="DemiBold" Margin="0,40,0,40" VerticalAlignment="Center"/>
 
         <!--кнопки управления-->
-        <Grid Grid.Row="1" Grid.Column="0">
+        <Grid Grid.Row="1" Grid.Column="0" DataContext="{StaticResource ListCarBrandViewModel}">
 
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*"/>
