добавление данных - марка авто

--- a/sparePartsStore/View/ViewAdministrator/ViewWorking/PageWorkListBrand.xaml
+++ b/sparePartsStore/View/ViewAdministrator/ViewWorking/PageWorkListBrand.xaml
@@ -44,9 +44,9 @@
         </Grid>
 
         <!--поля для ввода данных-->
-        <TextBox Grid.Row="1" Grid.Column="0" x:Name="SearchParts" Height="50" Margin="0,30,0,0"
+        <TextBox Grid.Row="1" Grid.Column="0" x:Name="nameBrand" Height="50" Margin="0,30,0,0"
              VerticalAlignment="Center" HorizontalAlignment="Center"
-             Text="{Binding Path=TextBrand, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"   
+             Text="{Binding Path=NameCarBrand, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"   
              materialDesign:TextFieldAssist.HasClearButton="True"
              Style="{StaticResource MaterialDesignOutlinedTextBox}" 
              materialDesign:HintAssist.Hint="Введите название марки" 
@@ -62,7 +62,7 @@
             </Grid.ColumnDefinitions>
 
             <Button Grid.Row="0" Grid.Column="0" Content="Отмена" Width="150" Height="35" Background="Gray" BorderBrush="Black"/>
-            <Button Grid.Row="0" Grid.Column="1" Content="Добавить" x:Name="RenameButtonBrand" Width="150" Height="35" Background="Gray" BorderBrush="Black" Margin="20,0,0,0"/>
+            <Button Grid.Row="0" Grid.Column="1" Content="Добавить" x:Name="RenameButtonBrand" Width="150" Height="35" Background="Gray" BorderBrush="Black" Margin="20,0,0,0" Click="SaveData"/>
 
         </Grid>
         
