--- a/sparePartsStore/View/ViewAdministrator/ViewWorkingWithData/PageListCarBrands.xaml
+++ b/sparePartsStore/View/ViewAdministrator/ViewWorkingWithData/PageListCarBrands.xaml
@@ -13,7 +13,7 @@
         <ViewModel:ListCarBrandViewModel x:Key="ListCarBrandViewModel"/>
     </Page.Resources>
 
-    <Grid Background="White" Margin="50,0,50,0">
+    <Grid Background="White" Margin="50,0,50,0" DataContext="{StaticResource ListCarBrandViewModel}">
 
         <!--стили-->
         <Grid.Resources>
@@ -38,7 +38,7 @@
         <TextBlock Grid.Row="0" Grid.Column="0" Text="Список марок автомобилей" FontSize="30" Foreground="Black" FontWeight="DemiBold" Margin="0,40,0,40" VerticalAlignment="Center"/>
 
         <!--кнопки управления-->
-        <Grid Grid.Row="1" Grid.Column="0" DataContext="{StaticResource ListCarBrandViewModel}">
+        <Grid Grid.Row="1" Grid.Column="0">
 
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*"/>
@@ -51,8 +51,8 @@
                 <RowDefinition Height="Auto"/>
             </Grid.RowDefinitions>
 
-            <Button Grid.Row="0" Grid.Column="0" Content="Добавить" MinWidth="100" Height="35" Background="Gray" BorderBrush="Black" Command="{Binding AddCarBrands}"/>
-            <Button Grid.Row="0" Grid.Column="1" Content="Редктировать" MinWidth="100" Height="35" Background="Gray" BorderBrush="Black" Margin="10,0,0,0" Command="{Binding EditCarBrand}"/>
+            <Button Grid.Row="0" Grid.Column="0" Content="Добавить" MinWidth="100" Height="35" Background="Gray" BorderBrush="Black" Click=" AddCarBrand"/>
+            <Button Grid.Row="0" Grid.Column="1" Content="Редктировать" MinWidth="100" Height="35" Background="Gray" BorderBrush="Black" Margin="10,0,0,0" Click="EditCarBrand"/>
             <Button Grid.Row="0" Grid.Column="2" Content="Удалить" MinWidth="100" Height="35" Background="Gray" BorderBrush="Black" Margin="10,0,0,0"/>
 
             <TextBox Grid.Row="1" Grid.ColumnSpan="3" x:Name="SearchParts" Height="50" Margin="0,20,0,0"
@@ -69,6 +69,8 @@
         <!--таблица-->
         <Grid Grid.Row="1" Grid.Column="1" MinWidth="600">
             <DataGrid
+                ItemsSource="{Binding ListCarBrand}"
+                SelectedItem="{Binding SelectedCarBrand}"
                 HorizontalAlignment="Center"
                 AutoGenerateColumns="False"
                 Style="{StaticResource MaterialDesignDataGrid}"
